src/style/SearchBox.scss
.search-box {
  width: 100%;
  padding: 1rem;

  display: flex;
  flex-direction: column;

  &.modal {
    background: rgb(20, 20, 30);
    border: #333 solid 1px;
    border-radius: 5px;

    height: 100%;
    padding: 1rem;
  }

  &:not(.modal) {
    height: 85vh;
  }

  > div {
    display: flex;
    width: 100%;
    flex-direction: row;
  }

  .search-filter-container {
    //margin-top: 0.5em;
    width: 100%;
    background: none;
  }

  input.search-term {
    width: 100%;
    height: 2rem;
    padding: 0.5rem;
    border: #6c6c6c solid 1px;
    border-radius: 5px;
    background: rgba(0, 0, 0, 0.5);
    color: #fff;
  }

  .toggle-fuzzy-container {
    display: flex;
    flex-direction: row;
    align-items: baseline;
    margin-left: 0.5rem;
    padding-top: 0.25rem;
  }

  .search-options-container {
    margin: 0.5em 0 0.5em 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    .search-sort-container {
      //width: 20%;
      margin-left: 0.5rem;
      .search-sort-select {
        height: 2rem;
        width: 10rem;
      }
    }
  }

  .search-filter-select {
    width: 100%;
    height: 2rem;
  }

  .close-button {
    height: 2rem;
    padding: 0.5rem;
  }

  .hit-count {
    margin: 0;
  }

  .results {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(11rem, 1fr));
    grid-gap: 0.5%;
    justify-items: center;

    width: 100%;
    height: 100%;
    margin-top: 0.25rem;

    background: rgba(0, 0, 0, 0.5);
    border: #333 solid 1px;
    border-radius: 5px;

    overflow-y: scroll;
    overflow-x: hidden;

    user-select: none;

    > div {
      width: min-content;
    }

    a {
      text-decoration: none;
      color: inherit;
      font-weight: inherit;
      cursor: inherit;
    }

    .card {
      height: fit-content;

      img.card-art {
        max-width: 100%;
        aspect-ratio: 1;
      }
    }

    .last-ref {
      width: min-content;
      margin: 0 auto;
    }
  }
}

